Attempt to fix transparent collapsed header

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -156,7 +156,7 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #373435ff;
+    background-color: #373435;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
